Fix formatting and spacing in admin.css

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,9 +1,15 @@
-      table{
-        width: 95%;
-        border-collapse: collapse;
-        margin-bottom: 20px;
+
+table{
+      width: 95%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
    
-    }
+}
+
+h1{
+      font-family: var(--font-title);
+}
+
 
     main{
         display: flex;
